# stable-diffusion-cli

./: pyproject.toml
stable_diffusion_cli/: __init__.py  cli.py
